<resources>
    <string name="app_name">AndroidParking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_Bookaslot">BookaSlot</string>
    <string name="menu_userdetails">Userdetails</string>
    <string name="menu_History">Histroy</string>
    <string name="menu_About">About</string>
    <string name="menu_Logout">Logout</string>
    <string name="invalid_name">Enter Correct Name</string>
    <string name="invalid_mobile">Enter Correct Mobile No</string>
    <string name="invaid_email">Enter Correct Email</string>
    <string name="invalid_username">Eneter Correct Username</string>
    <string name="invalid_password">Enter  Six digit password</string>
    <string name="invalid_owner_id">Enter valid Owner Id</string>
    <string name="invalid_user_name">"Enter Valid Username "</string>
    <string name="invalid_v_model">Enter Valid Vehicle Model</string>
    <string name="invalid_v_no">Enter Valid Vehicle Number</string>
    <string name="invaid_mobile">Enter Valid Mobile Number</string>
    <string name="invalid_time_slot">Enter Valid Time Slot</string>
    <string name="invalid_address">Enter Correct Address</string>
    <string name="invalid_slots">Enter Correct Slot</string>
</resources>